--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,4 +1,9 @@
-  <%= form_with(model: @user,html:{class:"form-horizontal",role:"form"}, local: true) do |form| %>
+<%= render 'shared/errors',obj: @user %>
+<div class="row">
+  <div class="col-md-offset-2 col-md-8 signup_back">
+     <h1 class="center">Edit Profile</h1>
+  <div class="col-md-offset-1 col-md-11">
+     <%= form_with(model: @user,url: admin_user_path,html:{class:"form-horizontal",role:"form"}, local: true) do |form| %>
       <div class="form-group">
         <div class="control-label col-md-2">
           <%= form.label :user_name%>
@@ -63,3 +68,6 @@
     </div>
    
    <% end %>
+   </div>
+ </div>
+</div>
