--- a/app/views/layouts/_nevbar.html.erb
+++ b/app/views/layouts/_nevbar.html.erb
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-inverse" style="background:rgba(38,45,61,0.95); box-shadow:0 0 1px rgba(0,0,0,.125), 0 1px 10px rgba(0,0,0,.2);font-color: white;">
   <div class="container-fluid">
     <div class="navbar-header">
+      <%=image_tag'blogger.png',class:"symbol-image float-left"%>
       <%= link_to 'Blogger App',index_path,class:"navbar-brand"%>
-     
     </div>
     <ul class="nav navbar-nav">
       <li><%=link_to 'List Blogs ',index_path%></li>
