--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -28,10 +28,10 @@
 					<div class="blog-title col-xs-12">
 						<h4><b><%= link_to data[:title],blog_show_path(data),class:"link"%></b></h4>
 					</div>
-					<div class="blog-body col-xs-8 float-left">
-						<%= truncate(data.description,lenght: 100)%>
+					<div class="blog-body col-xs-12 float-left">
+						<%= data.description.truncate(200,omission: '... (continued)')%>
 					</div>
-					<div class="list-blog-footer col-xs-4">
+					<div class="list-blog-footer col-xs-12">
 						<%= data.likes.count%> likes - <%=data.comments.count%> comments
 					</div>
 					</div>
