--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="container footer-position">
 	<footer class="footer">
 		<small>
-			Copyright &copy; <a href="https://www.Google.com">Rana's Buisness Application</a>
+			Copyright &copy; <a href="https://www.Google.com">Rana's Blogger Application</a>
 		</small>
 	<nev>
 		<ul>
